<?xml version="1.0"?>
<package>
  <name>ant_controller_configuration_gazebo</name>
  <version>0.9.0</version>
  <description>Gazebo-specifig launch files and scripts needed to configure
    the controllers of the ANT robot in simulation.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
