<?xml version="1.0"?>
<package>
  <name>ant_gazebo</name>
  <version>0.9.1</version>
  <description>Simulation files for the ANT robot.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ant_controller_configuration_gazebo</run_depend>
  <run_depend>ant_description</run_depend>
  <run_depend>ant_hardware_gazebo</run_depend>
  <run_depend>ant_bringup</run_depend>
  <run_depend>ant_laser_sensors</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
