<?xml version="1.0"?>
<package>
  <name>ant_hardware_gazebo</name>
  <version>0.9.0</version>
  <description>Gazebo plugin to control a ANT robot in simulation.</description>

  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>

  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/ant_hardware_gazebo_plugins.xml"/>
  </export>

</package>
