<?xml version="1.0"?>
<package>
  <name>ant_simulation</name>
  <version>0.9.0</version>
  <description>ANT-specific simulation components. These include plugins
               and launch scripts necessary for running ANT in simulation.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ant_controller_configuration_gazebo</run_depend>
  <run_depend>ant_gazebo</run_depend>
  <run_depend>ant_hardware_gazebo</run_depend>
  <run_depend>ant_2dnav_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
