<?xml version="1.0"?>
<package>
  <name>pmb2_2dnav_gazebo</name>
  <version>1.0.1</version>
  <description>PMB2-specific launch files needed to run
    navigation on the PMB2 robot.</description>
  <maintainer email="info@pal-robotics.com">PAL Robotics</maintainer>
  <maintainer email="tiago_support@pal-robotics.com">TIAGo support PAL Robotics</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pmb2_gazebo</run_depend>
  <run_depend>pmb2_2dnav</run_depend>
</package>
