<?xml version="1.0"?>
<package format="3">
  <name>pmb2_2dnav_gazebo</name>
  <version>3.0.3</version>
  <description>PMB2-specific launch files needed to run
    navigation on the PMB2 robot.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support PAL Robotics</maintainer>
  <license>Apache License 2.0</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>pmb2_gazebo</exec_depend>
  <exec_depend>pmb2_2dnav</exec_depend>
  <exec_depend>launch_pal</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
