<?xml version="1.0"?>
<package>
  <name>pmb2_controller_configuration_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo-specifig launch files and scripts needed to configure
    the controllers of the PMB2 robot in simulation.</description>
  <maintainer email="info@pal-robotics.com">PAL Robotics</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
