<?xml version="1.0"?>
<package format="3">
  <name>pmb2_gazebo</name>
  <version>3.0.2</version>
  <description>Simulation files for the PMB2 robot.</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <maintainer email="info@pal-robotics.com">PAL Robotics</maintainer>
  <maintainer email="tiago_support@pal-robotics.com">TIAGo support PAL Robotics</maintainer>
  <license>Modified BSD</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>launch_pal</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend>pmb2_bringup</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pmb2_controller_configuration</exec_depend>

  <!-- Pending to be ported to ROS2 
  <exec_depend>simple_models_gazebo</exec_depend>
  -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
