<?xml version="1.0"?>
<package>
  <name>pmb2_multi</name>
  <version>2.0.24</version>
  <description>The pmb2_multi package</description>

  <maintainer email="adria.roig@pal-robotics.com">Adrià Roig</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/pal-robotics/pmb2_simulation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pmb2_gazebo</run_depend>
</package>
