<?xml version="1.0"?>
<package format="3">
  <name>pmb2_simulation</name>
  <version>3.0.0</version>
  <description>PMB2-specific simulation components. These include plugins
               and launch scripts necessary for running PMB2 in simulation.</description>
  <maintainer email="info@pal-robotics.com">PAL Robotics</maintainer>
  <maintainer email="tiago_support@pal-robotics.com">TIAGo support PAL Robotics</maintainer>
  <license>BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pmb2_gazebo</exec_depend>
<!--  <exec_depend>pal_hardware_gazebo</exec_depend>-->
  <exec_depend>pmb2_2dnav_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>  
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
