<?xml version="1.0"?>
<package>
  <name>reem_2dnav_gazebo</name>
  <version>0.9.0</version>
  <description>REEM-specific launch files needed to run
    navigation on the REEM robot.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reem_gazebo</run_depend>
  <run_depend>reem_2dnav</run_depend>
</package>
