<?xml version="1.0"?>
<package>
  <name>reem_controller_configuration_gazebo</name>
  <version>0.9.0</version>
  <description>Gazebo-specifig launch files and scripts needed to configure
    the controllers of the REEM robot in simulation.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
