<?xml version="1.0"?>
<package>
  <name>reem_gazebo</name>
  <version>0.9.0</version>
  <description>Simulation files for the REEM robot.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reem_controller_configuration_gazebo</run_depend>
  <run_depend>reem_description</run_depend>
  <run_depend>reem_hardware_gazebo</run_depend>
  <run_depend>reem_bringup</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
