<?xml version="1.0"?>
<package>
  <name>reem_simulation</name>
  <version>0.9.0</version>
  <description>REEM-specific simulation components. These include plugins
               and launch scripts necessary for running REEM in simulation.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>BSD</license>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reem_controller_configuration_gazebo</run_depend>
  <run_depend>reem_gazebo</run_depend>
  <run_depend>reem_hardware_gazebo</run_depend>
  <run_depend>reem_2dnav_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
